--- a/core/admin/assets/sass/modules/animations.scss
+++ b/core/admin/assets/sass/modules/animations.scss
@@ -1,3 +1,16 @@
+/*
+ * Specific styles for re-usable animations in Ghost admin.
+ *
+ * Table of Contents:
+ * 
+ *
+ */
+
+
+/* =============================================================================
+   General
+   ============================================================================= */
+
 @-webkit-keyframes off-canvas {
   0%   { left:0; }
   100% { left:300px; }
