#98, #4 Implemented countable.js

--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -29,6 +29,7 @@
         <script type="text/javascript" src="/core/admin/assets/lib/underscore.js"></script>
         <script type="text/javascript" src="/core/admin/assets/lib/backbone/backbone.js"></script>
         <script type="text/javascript" src="/core/admin/assets/lib/backbone/backbone-layout.js"></script>
+        <script type="text/javascript" src="/core/admin/assets/lib/countable.js"></script>
         <script type="text/javascript" src="/core/admin/assets/js/toggle.js"></script>
         <script type="text/javascript" src="/core/admin/assets/js/admin-ui-temp.js"></script>
         {{{block "headScripts"}}}
