--- a/core/admin/views/editor.hbs
+++ b/core/admin/views/editor.hbs
@@ -1,14 +1,3 @@
-{{#contentFor 'bodyScripts'}}
-    <script src="/core/admin/assets/lib/codemirror/codemirror.js"></script>
-    <script src="/core/admin/assets/lib/codemirror/mode/markdown/markdown.js"></script>
-    <script src="/core/admin/assets/lib/showdown/showdown.js"></script>
-    <script src="/core/admin/assets/lib/showdown/extensions/ghostdown.js"></script>
-    <script src="/core/admin/assets/lib/shortcuts.js"></script>
-    <script src="/core/admin/assets/js/markdown-actions.js"></script>
-    <script src="/core/admin/assets/js/editor.js"></script>
-    <script src="/core/admin/assets/js/tagui.js"></script>
-{{/contentFor}}
-
 {{!< default}}
 {{! TODO: Add "scrolling" class only when one of the panels is scrolled down by 5px or more }}
 <header>
@@ -25,13 +14,13 @@
         <a class="markdown-help" href="#"><span class="hidden">What is Markdown?</span></a>
     </header>
     <section class="entry-markdown-content">
-        <textarea id="entry-markdown">{{content}}</textarea>
+        <textarea id="entry-markdown"></textarea>
     </section>
 </section>{{!.entry-markdown}}
 
 <section class="entry-preview">
     <header class="floatingheader">
-        Preview <span class="entry-word-count">0 words</span>
+        Preview <span class="entry-word-count js-entry-word-count">0 words</span>
     </header>
     <section class="entry-preview-content">
         <div class="rendered-markdown">
@@ -53,13 +42,13 @@
         <div class="right">
             <button id="entry-settings" href="#" class="button-link"><span class="hidden">Settings</span></button>
             <section id="entry-actions" class="splitbutton-save">
-                <button type="button" class="button-save" data-state="save-draft">Save Draft</button>
+                <button type="button" class="button-save js-post-button"></button>
                 <a class="options up" href="#"><span class="hidden">Options</span></a>
                 <ul class="editor-options overlay" style="display:none">
-                    <li data-title="publish-now" data-url=""><a href="#">Publish Now</a></li>
-                    <li data-title="queue" data-url=""><a href="#">Add to Queue</a></li>
-                    <li data-title="publish-on" data-url=""><a href="#">Publish on...</a></li>
-                    <li data-title="save-draft" data-url="" class="active"><a href="#">Save Draft</a></li>
+                    <li data-set-status="published"><a href="#">Publish Now</a></li>
+                    <li data-set-status="queue"><a href="#">Add to Queue</a></li>
+                    <li data-set-status="publish-on"><a href="#">Publish on...</a></li>
+                    <li data-set-status="draft"><a href="#">Save Draft</a></li>
                 </ul>
             </section>
         </div>
