Migrate settings page to Backbone

--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -55,10 +55,12 @@
 
         <!-- // require '/core/admin/assets/js/models/*' -->
         <script src="/core/admin/assets/js/models/post.js"></script>
+        <script src="/core/admin/assets/js/models/settings.js"></script>
         <!-- // require '/core/admin/assets/js/views/*' -->
         <script src="/core/admin/assets/js/views/base.js"></script>
         <script src="/core/admin/assets/js/views/blog.js"></script>
         <script src="/core/admin/assets/js/views/editor.js"></script>
+        <script src="/core/admin/assets/js/views/settings.js"></script>
         <script src="/core/admin/assets/js/router.js"></script>
         {{{block "bodyScripts"}}}
         <script>
