Converted static Widgets to Backbone.
Moved static HTML Widgets to Backbone.

Might need to move Widget data else where to keep it clean.
Will need to also implement API for future use.

--- a/core/admin/assets/sass/layouts/dashboard.scss
+++ b/core/admin/assets/sass/layouts/dashboard.scss
@@ -81,6 +81,10 @@
   }
 }
 
+.ui-draggable-dragging {
+  z-index: 9999; // Keep dragged Widget ontop
+}
+
 /* ==========================================================================
    Widget Sizes
    ========================================================================== */
