--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -45,6 +45,8 @@
         <script src="/core/admin/assets/lib/showdown/extensions/ghostdown.js"></script>
         <script src="/core/admin/assets/lib/shortcuts.js"></script>
         <script src="/core/admin/assets/lib/countable.js"></script>
+        <script src="/core/admin/assets/lib/jquery/jquery-ui-1.10.3.custom.min.js"></script>
+        <script src="/core/admin/assets/lib/packery.pkgd.min.js"></script>
 
         <script src="/core/admin/assets/js/init.js"></script>
         <script src="/core/admin/assets/tmpl/hbs-tmpl.js"></script>
@@ -55,7 +57,9 @@
 
         <!-- // require '/core/admin/assets/js/models/*' -->
         <script src="/core/admin/assets/js/models/post.js"></script>
+        <script src="/core/admin/assets/js/models/widget.js"></script>
         <!-- // require '/core/admin/assets/js/views/*' -->
+        <script src="/core/admin/assets/js/views/dashboard.js"></script>
         <script src="/core/admin/assets/js/views/blog.js"></script>
         <script src="/core/admin/assets/js/views/editor.js"></script>
         <script src="/core/admin/assets/js/router.js"></script>
